{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 762,
  "lineage": "363c9e0b-736b-9117-7835-b4ce7802e550",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "Jumpnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/searg/providers/Microsoft.Network/networkInterfaces/jump-nic-0",
            "internal_domain_name_suffix": "0zxeljdpdkcufffnpedfaokhda.ix.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ip_config",
                "primary": true,
                "private_ip_address": "10.1.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/searg/providers/Microsoft.Network/publicIPAddresses/jumpvmip-0",
                "subnet_id": "/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/searg/providers/Microsoft.Network/virtualNetworks/seavnet/subnets/jumpsubnet"
              }
            ],
            "location": "southeastasia",
            "mac_address": "00-0D-3A-A0-8E-4C",
            "name": "jump-nic-0",
            "private_ip_address": "10.1.2.4",
            "private_ip_addresses": [
              "10.1.2.4"
            ],
            "resource_group_name": "searg",
            "virtual_machine_id": "/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/searg/providers/Microsoft.Compute/virtualMachines/jumpvm-0"
          },
          "dependencies": [
            "azurerm_subnet.Subnet2",
            "azurerm_virtual_network.vnet1",
            "azurerm_public_ip.Jumpips",
            "azurerm_resource_group.searg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "Vmnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/eusrg/providers/Microsoft.Network/networkInterfaces/vm-nic",
            "internal_domain_name_suffix": "mqi3fxlfym0efeafx4uk2nlnxd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ip_config",
                "primary": true,
                "private_ip_address": "10.2.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/eusrg/providers/Microsoft.Network/publicIPAddresses/vmip",
                "subnet_id": "/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/eusrg/providers/Microsoft.Network/virtualNetworks/eusvnet/subnets/eussubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-25-94-6B",
            "name": "vm-nic",
            "private_ip_address": "10.2.1.4",
            "private_ip_addresses": [
              "10.2.1.4"
            ],
            "resource_group_name": "eusrg",
            "virtual_machine_id": "/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/eusrg/providers/Microsoft.Compute/virtualMachines/Server11"
          },
          "dependencies": [
            "azurerm_public_ip.Eusvmips",
            "azurerm_resource_group.eusrg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "Jumpnsg-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/searg/providers/Microsoft.Network/networkInterfaces/jump-nic-0|/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/searg/providers/Microsoft.Network/networkSecurityGroups/nsg2",
            "network_interface_id": "/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/searg/providers/Microsoft.Network/networkInterfaces/jump-nic-0",
            "network_security_group_id": "/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/searg/providers/Microsoft.Network/networkSecurityGroups/nsg2"
          },
          "dependencies": [
            "azurerm_subnet.Subnet2",
            "azurerm_virtual_network.vnet1",
            "azurerm_network_interface.Jumpnic",
            "azurerm_network_security_group.Jumpnsg",
            "azurerm_public_ip.Jumpips",
            "azurerm_resource_group.searg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "Vmnsg-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/eusrg/providers/Microsoft.Network/networkInterfaces/vm-nic|/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/eusrg/providers/Microsoft.Network/networkSecurityGroups/nsg",
            "network_interface_id": "/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/eusrg/providers/Microsoft.Network/networkInterfaces/vm-nic",
            "network_security_group_id": "/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/eusrg/providers/Microsoft.Network/networkSecurityGroups/nsg"
          },
          "dependencies": [
            "azurerm_public_ip.Eusvmips",
            "azurerm_resource_group.eusrg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet2",
            "azurerm_network_interface.Vmnic",
            "azurerm_network_security_group.Vmnsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "Jumpnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/searg/providers/Microsoft.Network/networkSecurityGroups/nsg2",
            "location": "southeastasia",
            "name": "nsg2",
            "resource_group_name": "searg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.searg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "Vmnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/eusrg/providers/Microsoft.Network/networkSecurityGroups/nsg",
            "location": "eastus",
            "name": "nsg",
            "resource_group_name": "eusrg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.eusrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "Eusvmips",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/eusrg/providers/Microsoft.Network/publicIPAddresses/vmip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.226.18.95",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "vmip",
            "resource_group_name": "eusrg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.eusrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "Jumpips",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/searg/providers/Microsoft.Network/publicIPAddresses/jumpvmip-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.43.14.147",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "jumpvmip-0",
            "resource_group_name": "searg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.searg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.2.0/24",
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/searg/providers/Microsoft.Network/virtualNetworks/seavnet/subnets/jumpsubnet",
            "name": "jumpsubnet",
            "resource_group_name": "searg",
            "virtual_network_name": "seavnet"
          },
          "dependencies": [
            "azurerm_resource_group.searg",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.2.1.0/24",
            "address_prefixes": [
              "10.2.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/eusrg/providers/Microsoft.Network/virtualNetworks/eusvnet/subnets/eussubnet",
            "name": "eussubnet",
            "resource_group_name": "eusrg",
            "virtual_network_name": "eusvnet"
          },
          "dependencies": [
            "azurerm_resource_group.eusrg",
            "azurerm_virtual_network.vnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "guid": "a4456ed6-1a6f-4285-94ad-790650394718",
            "id": "/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/searg/providers/Microsoft.Network/virtualNetworks/seavnet",
            "location": "southeastasia",
            "name": "seavnet",
            "resource_group_name": "searg",
            "subnet": [
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/searg/providers/Microsoft.Network/virtualNetworks/seavnet/subnets/websubnet",
                "name": "websubnet"
              },
              {
                "address_prefix": "10.1.2.0/24",
                "id": "/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/searg/providers/Microsoft.Network/virtualNetworks/seavnet/subnets/jumpsubnet",
                "name": "jumpsubnet"
              }
            ],
            "tags": {
              "businessUnit": "Ayur Medicines",
              "created_by": "Muthamizh",
              "deploymentType": "Terraform",
              "organization": "Nilavembu Herbs"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.searg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "guid": "ddd21164-c365-4234-9005-bfa8ae356dbb",
            "id": "/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/eusrg/providers/Microsoft.Network/virtualNetworks/eusvnet",
            "location": "eastus",
            "name": "eusvnet",
            "resource_group_name": "eusrg",
            "subnet": [
              {
                "address_prefix": "10.2.1.0/24",
                "id": "/subscriptions/655d0f90-8754-4202-bbf3-5270b47e7a55/resourceGroups/eusrg/providers/Microsoft.Network/virtualNetworks/eusvnet/subnets/eussubnet",
                "name": "eussubnet"
              }
            ],
            "tags": {
              "businessUnit": "Ayur Medicines",
              "created_by": "Muthamizh",
              "deploymentType": "Terraform",
              "organization": "Nilavembu Herbs"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.eusrg"
          ]
        }
      ]
    }
  ]
}